Fix page width on mobile devices

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -55,6 +55,11 @@
   padding: 1em;
 }
 
+.dashboard .no-categories p {
+  line-height: normal;
+  white-space: normal;
+}
+
 a.view-all {
   position: absolute;
   right: 0.5em;
